--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,7 @@ a {
   height: 86px;
   border: none;
 
+  font-family: "PT Sans", Arial, sans-serif;
   text-transform: uppercase;
   font-size: 21px;
   font-weight: 700;
@@ -436,13 +437,28 @@ a {
   display: block;
 }
 
-@keyframes popupshow {
+@-webkit-keyframes popupshow {
   0% {
-    transform: translateY(-90%);
+    -webkit-transform: translateY(-90%);
+            transform: translateY(-90%);
     opacity: 0;
   }
   100% {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes popupshow {
+  0% {
+    -webkit-transform: translateY(-90%);
+            transform: translateY(-90%);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
     opacity: 1;
   }
 }
@@ -1055,7 +1071,8 @@ a {
 }
 
 .filters__price-input {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   height: 32px;
   width: 50px;
   margin: 0;
